LaTex README added

--- a/Benchmarks.tex
+++ b/Benchmarks.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt]{article}
 \usepackage[T1]{fontenc}
+\usepackage{latex_packages/pythontex}
 \usepackage{atbegshi}
 \usepackage{graphicx}
 \usepackage{hyperref}
@@ -12,6 +13,12 @@
 \maketitle \noindent
 In questo documento verranno documentati 10 diversi \textit{benchmarks}, effettuati attraverso motore di ricerca \textit{Gamenter}, al fine di valutarne le peculiarità e la correttezza dei risultati.
 \\ \\
+
+\begin{pyconsole}
+import math
+print(math.sqrt(3))
+\end{pyconsole}
+
 Ogni \textit{benchmark} sarà strutturato in questo modo:
 
 \begin{itemize}
